# dlc-stack-v2

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-build-dev.yml  docker-build-pr.yml  docker-build-tagged.yml  docker-build.yml
attestor/: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_all.sh  build_and_start.sh  config.yaml  docker-compose.yml  justfile  package-lock.json  package.json  tsconfig.json
attestor-client/: Cargo.toml
attestor-client/src/: lib.rs
attestor/observer/: .env.template  Procfile  README.md  build_all.sh  package-lock.json  package.json  start_attestor.sh  tsconfig.json
attestor/observer/src/: index.ts  polyfills.ts
attestor/observer/src/chains/ethereum/: get-config.ts  get-network-config.ts  get-observer.ts
attestor/observer/src/chains/ethereum/contracts/: dlc-manager-v0.ts  dlc-manager-v1.ts
attestor/observer/src/chains/ethereum/utilities/: websocket-provider.ts
attestor/observer/src/chains/shared/models/: observer.interface.ts
attestor/observer/src/chains/stacks/: get-observer.ts
attestor/observer/src/chains/stacks/config/: get-config.ts
attestor/observer/src/chains/stacks/config/contract-configs/: dlc-manager-v1.ts
attestor/observer/src/chains/stacks/models/: interfaces.ts
attestor/observer/src/chains/stacks/utilities/: api-calls.ts  helper-functions.ts  unwrappers.ts
attestor/observer/src/config/: get-observers.ts  models.ts  prom-metrics.models.ts  read-env-configs.ts
attestor/observer/src/http/: routes.ts  server.ts
attestor/observer/src/services/: attestor.service.ts  config.service.ts
attestor/src/: error.rs  lib.rs
attestor/src/oracle/: error.rs  handler.rs  mod.rs  secret_key.rs  vault.rs
attestor/src/oracle/oracle_queryable/: error.rs
clients/: Cargo.toml
clients/src/: async_storage_provider.rs  lib.rs  mod.rs  utils.rs
dlc-bdk-wallet/: Cargo.toml
dlc-bdk-wallet/src/: lib.rs
dlc-link-manager/: Cargo.toml
dlc-link-manager/src/: lib.rs  macros.rs
dlc-wallet/: Cargo.toml
dlc-wallet/src/: lib.rs
docker/: Dockerfile
esplora-async-blockchain-provider/: Cargo.toml
esplora-async-blockchain-provider-js-wallet/: Cargo.toml
esplora-async-blockchain-provider-js-wallet/src/: lib.rs
esplora-async-blockchain-provider-router-wallet/: Cargo.toml
esplora-async-blockchain-provider-router-wallet/src/: lib.rs
esplora-async-blockchain-provider/src/: lib.rs
it/: .env.template  .prettierrc  Dockerfile  README.md  attestor-config.yaml  config.js  docker-compose.yml  index.js  justfile  package-lock.json  package.json  wallet-config.yaml
it/scripts/: build.sh  start-apps.sh
it/src/: config.js  index.js  polyfills.js
js-interface-wallet/: Cargo.toml  Readme.md
js-interface-wallet/src/: lib.rs  macros.rs
oracle/: Cargo.toml  Dockerfile
oracle/config/: secret.key
oracle/src/: error.rs  main.rs
oracle/src/oracle/: error.rs  mod.rs  secret_key.rs
storage/: Dockerfile  README.md  justfile
storage/api/: Cargo.toml
storage/api/src/: contracts.rs  events.rs  main.rs  verify_sigs.rs
storage/common/: Cargo.toml
storage/common/migrations/20221221121300_create_contract_table/: up.sql
storage/common/migrations/20221229124240_create_events_table/: up.sql
storage/common/migrations/2023-12-01-102142_add_chain_column/: down.sql  up.sql
storage/common/migrations/2023-12-08-145357_remove_chain_column/: down.sql  up.sql
storage/common/src/: lib.rs  models.rs  schema.rs
storage/reader/src/: lib.rs
storage/writer/src/: lib.rs
wallet/: .dockerignore  .env.template  .future-incompat-report.json  .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  README.md  config.yaml  create_cert.sh  docker-compose.yml  justfile  package-lock.json  package.json  tsconfig.json
wallet-blockchain-interface/: .prettierrc  Dockerfile  README.md  deploymentFiles  package.json  tsconfig.json
wallet-blockchain-interface/src/: index.ts
wallet-blockchain-interface/src/chains/shared/models/: wrapped-contract.interface.ts
wallet-blockchain-interface/src/chains/stacks/: get-config.ts  helper-functions.ts
wallet-blockchain-interface/src/config/: models.ts  read-env-configs.ts
wallet-blockchain-interface/src/http/: routes.ts  server.ts
wallet/docker/: .env.template  Dockerfile  Dockerfile.utils  docker-compose.yml  supervisord.conf
wallet/docs/: wallet.yaml
wallet/src/: macros.rs  main.rs  main_warp_test-file.rs  oracle_client.rs  secret.key  utils.rs
wallet/src/storage/: memory_storage.rs  storage_api.rs  storage_provider.rs  utils.rs
wallet/wallet-blockchain-interface/: .env.template  Dockerfile  README.md  deploymentFiles  package-lock.json  package.json  tsconfig.json
wallet/wallet-blockchain-interface/src/: index.ts
wallet/wallet-blockchain-interface/src/chains/ethereum/: get-config.ts
wallet/wallet-blockchain-interface/src/chains/shared/models/: deployment-info.interface.ts  nft-holdings-data.interface.ts  wrapped-contract.interface.ts
wallet/wallet-blockchain-interface/src/chains/stacks/: get-config.ts  get-network-config.ts
wallet/wallet-blockchain-interface/src/config/: attestor-lists.ts  models.ts  read-env-configs.ts
wallet/wallet-blockchain-interface/src/http/: middlewares.ts  routes.ts
wallet/wallet-blockchain-interface/src/http/private-server/: routes.ts  server.ts
wallet/wallet-blockchain-interface/src/http/public-server/: routes.ts  server.ts
wallet/wallet-blockchain-interface/src/services/: blockchain-interface.service.ts  blockchain-writer.service.ts  config.service.ts  router-wallet.service.ts  stacks-nonce.service.ts
wasm-wallet/: .gitignore  Cargo.toml  README.md  justfile
wasm-wallet/docker/: .env.template  docker-compose.yml
wasm-wallet/src/: lib.rs  macros.rs
