[workspace]
members = [
  "attestor",
  "attestor-client",
  "esplora-async-blockchain-provider-js-wallet",
  "esplora-async-blockchain-provider-router-wallet",
  "js-interface-wallet",
  "dlc-link-manager",
  "wallet",
  "wasm-wallet",
  "clients",
  "dlc-wallet",
  "storage/reader",
  "storage/writer",
  "storage/common",
  "storage/api",
]
