[package]
name = "attestor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
bitcoin = { version = "0.29.2", features = [
  "serde",
] } # Not using Bitcoin in this package, but listing here to recursively import the serde features downstream
displaydoc = "0.2"
dlc = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
futures = "0.3.21"
hex = "0.4"
lightning = {version = "0.0.116"}
log = "0.4.17"
secp256k1-zkp = { version = "0.7.0", features = [
  "bitcoin_hashes",
  "global-context",
  "rand",
  "rand-std",
  "serde",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["formatting", "serde-human-readable"] }
dlc-clients = { path = "../clients" }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = { version = "0.4.34" }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
