[package]
name = "dlc-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.1"
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking", "json"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.4.0"
secp256k1-zkp = { version = "0.7.0", default-features = false}

[dev-dependencies]
mockito = "1.2.0"
actix-rt = "*"
bitcoin = {version = "0.29.2"}
bdk = {version = "0.28.0", default-features = false, features = ["keys-bip39"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
