[package]
authors = ["DLC-Link"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/dlc-link/dlc-stack"
license-file = "../LICENSE"
name = "dlc-link-manager"
repository = "https://github.com/dlc-link/dlc-stack/dlc-link-manager"
version = "0.4.0"

[dependencies]
bitcoin = {version = "0.29.2", features = ["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-trie = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
futures = {version = "0.3.28"}
lightning = {version = "0.0.113"}
log = "0.4.14"
rand_chacha = {version = "0.3.1", optional = true}
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
serde = {version = "1.0", optional = true}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
