[package]
authors = ["DLC-Link"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/dlc-link/dlc-stack"
license-file = "../LICENSE"
name = "dlc-link-manager"
repository = "https://github.com/dlc-link/dlc-stack/dlc-link-manager"
version = "0.4.0"

[dependencies]
bitcoin = {version = "0.29.2", features = ["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", rev= "c55e128", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", rev= "c55e128", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", rev= "c55e128", features = ["use-serde"] }
futures = {version = "0.3.28"}
lightning = {version = "0.0.116"}
log = "0.4.14"
rand_chacha = {version = "0.3.1", optional = true}
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
serde = {version = "1.0.193", optional = true}
serde_json = "1.0.81"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
