[package]
edition = "2018"
name = "dlc-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29"
dlc = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
lightning = {version = "0.0.116"}
log = "0.4.17"
secp256k1-zkp = {version = "0.7.0"}

[dev-dependencies]
secp256k1-zkp = {version = "0.7.0", features = ["global-context"]}
