[package]
edition = "2018"
name = "js-interface-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29.2", features = ["serde"] }
dlc = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", rev = "c55e128", features = ["use-serde"] }
lightning = { version = "0.0.116" }
rust-bitcoin-coin-selection = { version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", rev = "4054519", features = ["rand"] }
secp256k1-zkp = { version = "0.7.0" }
miniscript = { version = "10.0", features = ["serde", "std"], default-features = false }
bdk = { version = "0.28.0", default-features = false, features = ["async-interface", "use-esplora-async"] }

[dev-dependencies]
secp256k1-zkp = { version = "0.7.0", features = ["global-context"] }
