[package]
edition = "2021"
name = "dlc-protocol-wallet"
version = "0.1.0"

[[bin]]
name = "dlc-protocol-wallet"
path = "src/main.rs"

[dependencies]
base64 = "0.13.1"
bitcoin-rpc-provider = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc"}
bitcoincore-rpc = {version = "0.16.0"}
bitcoincore-rpc-json = {version = "0.16.0"}
chrono = {version = "0.4.19", features = ["serde"]}
dlc = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", features = ["use-serde"]}
dlc-manager = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", features = ["use-serde"]}
dlc-messages = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", features = ["use-serde"]}
dlc-trie = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", features = ["use-serde"]}
dlc-sled-storage-provider = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc"}
env_logger = "0.9.0"
lightning = {version = "0.0.113" }
hex = "0.4"
log = "0.4.17"
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
dlc-clients = { path = "../clients" }
rouille = {version = "3.5.0"}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.7.0" }
sled = "0.34"
tokio = "1.23.0"
warp = "0.3"

[dev-dependencies]
mockito = "0.31.0"
