[package]
edition = "2021"
name = "dlc-protocol-wallet"
version = "0.4.0"

[[bin]]
name = "dlc-protocol-wallet"
path = "src/main.rs"

[dependencies]
attestor-client = { path = "../attestor-client" }
bdk = {version = "0.28.0", default-features = false, features = ["keys-bip39", "key-value-db", "use-esplora-reqwest", "reqwest-default-tls", "async-interface"]}
bitcoin = {version = "0.29.2"}
bytes = "1"
chrono = {version = "0.4.19", features = ["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-clients = { path = "../clients" }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-trie = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
#electrs-blockchain-provider = { git = "https://github.com/dlc-link/rust-dlc" }
esplora-async-blockchain-provider = { path = "../esplora-async-blockchain-provider" }
env_logger = "0.9.0"
futures-util = { version = "0.3", default-features = false }
lightning = {version = "0.0.113" }
hex = "0.4"
hyper = {version = "0.14", features = ["full"]}
http = "0.2"
http-body = "=1.0.0-rc.2"
log = "0.4.17"
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.7.0" }
dlc-bdk-wallet = { path = "../dlc-bdk-wallet" }
sled = "0.34"
tokio = {version = "1.31.0", features = ["rt"]}
pretty_env_logger = "0.4.0"
url = "2.2.2"
